# benchmark_runner

./: README.md
benchmark_runner/: CMakeLists.txt  package.xml  setup.py
benchmark_runner/config/: .gitignore  benchmark_1.json  benchmark_1.yaml  parameter_sweep.json  pick_and_place_task.json  planning_groups.json  sweep_config.json
benchmark_runner/data/: .gitkeep  benchmark_1.yaml  benchmark_1_results.csv  benchmark_config.json  kingpin.irl  kingpin.lisp  multiple_lines.irl  pick_task_1.txt  pick_task_1.yaml  simple_line.irl
benchmark_runner/launch/: benchmark_example.launch  interative_markers.launch  main_server.launch  moveit.rviz  run.launch  rviz.launch
benchmark_runner/scripts/: benchmark.py  lin_planning_request_example.py  load.py  pick_and_place_task  pickit_dummy  publish_work.py  remap_joint_states  run.py  run_benchmark.py  send_linplanning_request.py  setup_3_hardcoded.py  show_trajectory_tutorial_code.py  simple_task.py  stages.py  start_picking  sweep.py  try_planner_params.py
benchmark_runner/src/: visual_node.cpp
benchmark_runner/src/benchmark_runner/: exceptions.py  logging.py  planner_interface.py  stages.py  task_runner.py  task_solver.py
