<?xml version="1.0"?>
<package format="2">
  <name>benchmark_runner</name>
  <version>0.0.0</version>
  <description>Main server to run benchmark application.</description>

  <maintainer email="jeroen@todo.todo">jeroen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- General dependecies -->
  <build_depend>roscpp</build_depend>
  <build_depend>nexon_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nexon_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>tf2_web_republisher</exec_depend>
  <exec_depend>interactive_marker_tutorials</exec_depend>
  
  <!-- Python scripts specific extra dependencies -->
  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>nexon</exec_depend>

</package>
